--- a/WebAPIDiceShop/appsettings.json
+++ b/WebAPIDiceShop/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=diceshop;User=root;Password=Pokemon91;"
+    "DefaultConnection": "Server=localhost;Database=diceshop;User=root;Password=pokemon991*"
   },
 
   "Smtp": {
