--- a/WebAPIDiceShop/appsettings.json
+++ b/WebAPIDiceShop/appsettings.json
@@ -7,14 +7,14 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=diceshop;User=root;Password=Pokemon91"
+    "DefaultConnection": "Server=localhost;Database=diceshop;User=root;Password=password"
   },
 
   "Smtp": {
     "Host": "smtp.gmail.com",
     "Port": "587",
     "Username": "pabloinfo9911@gmail.com",
-    "Password": "qknhztfhqgpeovok",
+    "Password": "password",
     "From": "pabloinfo9911@gmail.com"
   },
   "Stripe": {
